# SpeedApp

./: README.md
Frameworks/Onnx_Runtime/: ort.cpp
Frameworks/TF_Lite/: tflite.cpp
Frameworks/Torch_script/: torch.cpp
MobileNeuralNetwork/: settings.gradle
MobileNeuralNetwork/app/: build.gradle
MobileNeuralNetwork/app/src/main/: AndroidManifest.xml
MobileNeuralNetwork/app/src/main/cpp/: CMakeLists.txt  mnn_native.cpp
MobileNeuralNetwork/app/src/main/res/layout/: activity_main.xml
MobileNeuralNetwork/app/src/main/res/values/: strings.xml  themes.xml
MobileNeuralNetwork/app/src/main/res/values-night/: themes.xml
MobileNeuralNetwork/gradle/wrapper/: gradle-wrapper.properties
NativeSpeedapp/: settings.gradle
NativeSpeedapp/app/: build.gradle
NativeSpeedapp/app/src/main/: AndroidManifest.xml
NativeSpeedapp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NativeSpeedapp/app/src/main/cpp/frameworks/includes/: ort.h  tflite.h  torch.h
NativeSpeedapp/app/src/main/res/layout/: activity_main.xml
NativeSpeedapp/gradle/wrapper/: gradle-wrapper.properties
TFLite/: settings.gradle
TFLite/app/: build.gradle
TFLite/app/src/main/: AndroidManifest.xml
TFLite/gradle/wrapper/: gradle-wrapper.properties
onnx/: settings.gradle
onnx/app/: build.gradle
onnx/app/src/main/: AndroidManifest.xml
onnx/gradle/wrapper/: gradle-wrapper.properties
torchscript/: settings.gradle
torchscript/app/: build.gradle
torchscript/app/src/main/: AndroidManifest.xml
torchscript/gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
